--- a/dolphin-server/pom.xml
+++ b/dolphin-server/pom.xml
@@ -141,6 +141,13 @@
             <version>0.4.8</version>
         </dependency>
 
+        <!-- excel导入导出 -->
+        <dependency>
+            <groupId>cn.afterturn</groupId>
+            <artifactId>easypoi-spring-boot-starter</artifactId>
+            <version>4.1.3</version>
+        </dependency>
+
 
 
 
@@ -177,9 +184,22 @@
         </dependency>
 
 
+
     </dependencies>
 
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 
