--- a/dolphin-server/src/main/resources/config/application-dev.yml
+++ b/dolphin-server/src/main/resources/config/application-dev.yml
@@ -6,9 +6,9 @@ spring:
   # 数据源配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/dolphin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+    url: jdbc:mysql://120.79.159.81:3306/dolphin?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
     username: root
-    password:
+    password: Dx3229010_mysql
     hikari:
       # 连接池名
       pool-name: DateHikariCP
