--- a/dolphin-server/src/main/resources/config/application-dev.yml
+++ b/dolphin-server/src/main/resources/config/application-dev.yml
@@ -118,7 +118,7 @@ file:
   uploadFolder: /site/dolphin_java/back_server/java_dolphin/dolphin-server/src/main/resources/static/
 
 wechat:
-  appid: wx1da7b1ceecefe90f
-  appsecert: 0688370c6c4e811ce14104b8e3081077
+  appid: wx13eb6f69c3407043
+  appsecert: 226f75b3e918015e7e7b6ddeac90da7d
 
 
