--- a/dolphin-server/pom.xml
+++ b/dolphin-server/pom.xml
@@ -147,10 +147,12 @@
             <artifactId>easypoi-spring-boot-starter</artifactId>
             <version>4.1.3</version>
         </dependency>
-
-
-
-
+<!--        微信支付-->
+         <dependency>
+             <groupId>com.github.wxpay</groupId>
+             <artifactId>wxpay-sdk</artifactId>
+             <version>0.0.3</version>
+         </dependency>
 
         <dependency>
             <groupId>javax.xml.bind</groupId>
